[tool.poetry]
name = "analise_bonus_viagem"
version = "0.1.1-alpha.0"
description = ""
authors = ["Britodfbr <britodfbr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
